--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shailendra7518.github.io/shailendra-portfolio",
+  "homepage": "http://shailendra7518.github.io/portfolioshailendra",
   "name": "shailendra-portfolio",
   "version": "0.1.0",
   "private": true,
