--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-icons": "^3.11.0",
     "react-pdf": "^5.7.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "reactjs-pdf-reader": "^1.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
